# aide-de-camp

./: .gitignore  CHANGELOG.md  Cargo.toml  UPGRADING_v0.3.md  devenv.nix
.github/workflows/: pr-build.yaml
.sqlx/: query-45bd3fdf8cae3adecfb6b2851010f7f9b6e67bb6005598b480b7a1ed59b212db.json  query-52a42447be39002c9ea32ac14a8dff9a9a459c9b16c7c76f6d380c5492b07843.json  query-57789da912edf4d4b8c8fda95fb5ccbb139459bd6fa16ec421bf8f7d9ec209a0.json  query-7621f919fc2f38bb65606230b43156f609d9a6b625d97ad32c2e0bc6aba7005b.json  query-7ef27bc8cc8b9c6da438cea4f9a5f1f2afdabab54de3a31fdfc3289f62da7205.json  query-90ff02e75816b440adb7fcf15d39a89892f021c6ab1d5c54fc582514ee00e3ee.json  query-c09da3935519d156e9518369ea6b38fe15e9a00fc97428379383ffb746fb164b.json
aide-de-camp/: Cargo.toml
aide-de-camp-postgres/: Cargo.toml
aide-de-camp-postgres/migrations/: 20221015223453_initial_schema.sql  20221015224053_add_priority.sql  20260104000000_add_cron_jobs.sql  20260106000000_v2_schema.sql
aide-de-camp-postgres/src/: cron_queue.rs  job_handle.rs  lib.rs  queue.rs  types.rs
aide-de-camp-sqlite/: Cargo.toml
aide-de-camp-sqlite-bench/: Cargo.toml
aide-de-camp-sqlite-bench/src/: main.rs
aide-de-camp-sqlite/migrations/: 20260104000000_add_cron_jobs.sql  20260106000000_v2_schema.sql
aide-de-camp-sqlite/src/: cron_queue.rs  job_handle.rs  lib.rs  queue.rs  types.rs
aide-de-camp/src/: core.rs  cron_queue_spec.rs  lib.rs  queue_spec.rs
aide-de-camp/src/core/: cron.rs  cron_queue.rs  job_handle.rs  job_processor.rs  job_type_id.rs  queue.rs
aide-de-camp/src/runner/: cron_scheduler.rs  job_router.rs  job_runner.rs  wrapped_job.rs
electorate/: Cargo.toml
electorate/src/: always.rs  elector.rs  lib.rs  never.rs  postgres.rs
