[package]
name = "aide-de-camp-postgres"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andoriyu/aide-de-camp"
documentation = "https://docs.rs/aide-de-camp-postgres"
description = "PostgreSQL implementation of Queue trait from aide-de-camp"
keywords = ["job", "scheduler", "queue", "postgresql", "database"]
authors = ["Andrey Snow <andoriyu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = { path = "../aide-de-camp", version = "0.4.0", features = ["runner"] }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "macros", "chrono", "migrate", "json", "uuid", "runtime-tokio-rustls"] }
tracing = "0.1"
uuid = { version = "1.7", features = ["v7", "serde"] }

[dev-dependencies]
paste = "1.0"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros"] }

[features]
default = []
