[package]
name = "aide-de-camp-sqlite-bench"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = { path = "../aide-de-camp", version = "0.3.0" }
aide-de-camp-sqlite = { path = "../aide-de-camp-sqlite", version = "0.3.0" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
