[package]
name = "aide-de-camp"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zero-assumptions/aide-de-camp"
documentation = "https://docs.rs/aide-de-camp"
description = "Aide-De-Camp is a backend agnostic delayed job queue."
keywords = ["job", "scheduler", "queue"]
authors = ["Andrey Snow <andoriyu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
futures = "0.3"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["time", "sync", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
xid = "1.0"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["runner"]
runner = ["tokio/rt", "rand"]

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
